Each poster is sized and aligned correctly

--- a/src/styles/MoviePoster.module.css
+++ b/src/styles/MoviePoster.module.css
@@ -1,3 +1,14 @@
 .moviePoster {
     flex-grow: 1;
+    width: 14%;
+    height: 90%;
+    left: 0;
+    right: 0;
+    margin: 5% 2.5%;
+    display: block;
+}
+
+.image {
+    width: 100%;
+    height: 100%;
 }
