--- a/src/styles/NowShowing.module.css
+++ b/src/styles/NowShowing.module.css
@@ -4,4 +4,5 @@
     left: 0;
     right: 0;
     box-sizing: border-box;
+    align-items: center;
 }
